Made the wishlist buttons small in customer wishlist area and fixed the before psuedo showing in random places in wishlist//giftcard -- fixed select container having a height set, causing it to be cut off

--- a/webroot/skin/frontend/blueacorn/mis/css/styles-account.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles-account.css
@@ -1683,6 +1683,17 @@ body.customer-account .my-account .title-buttons.recurring-profiles-title-button
   height: 40px;
   margin-right: 25px; }
 
+.my-account .count-container p {
+  line-height: 76px;
+  height: 46px; }
+
+.my-account #giftcard-form .input-box.validation-passed:before {
+  top: 14px; }
+
+.my-account .widget-addbysku .input-box.validation-passed:before {
+  top: 14px;
+  left: -18px; }
+
 /* ============================================ *
  * RMA List
  * ============================================ */
