--- a/webroot/skin/frontend/blueacorn/mis/css/styles-ie8.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles-ie8.css
@@ -1471,7 +1471,6 @@ span.weee {
     margin: 0 15px 0 0; }
   .pager .limiter {
     float: left;
-    height: 30px;
     line-height: 30px; }
     .pager .limiter > label {
       padding-right: 5px; }
