--- a/webroot/skin/frontend/blueacorn/mis/scss/core/_common.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/core/_common.scss
@@ -1694,7 +1694,7 @@ $toolbar-icon-padding-offset: 8px;
 
     .limiter {
         float: left;
-        height: 30px;
+//        height: 30px;
         line-height: 30px;
 
         & > label {
